Bug 1334346 - DocGroup should be correct for static clone documents (print, print preview) (r=smaug)

MozReview-Commit-ID: f0LdbxSahb